Fixed ShardLocation port issue