@@ -6,7 +6,7 @@
 	<groupId>com.microsoft.azure</groupId>
 	<artifactId>elastic-db-tools</artifactId>
 	<packaging>jar</packaging>
-	<version>1.0</version>
+	<version>1.0.1</version>
 	<name>Azure Elastic Database Tools</name>
 
 	<developers>
@@ -20,11 +20,11 @@
 	
 	<properties>
 		<azurejavasdk.version>${project.version}</azurejavasdk.version>
-    		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-   		 <jre.version>1.8</jre.version>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<jre.version>1.8</jre.version>
 		<junit.version>4.12</junit.version>
 		<maven.compiler.version>3.7.0</maven.compiler.version>
-    		<maven.surefire.version>2.20.1</maven.surefire.version>
+		<maven.surefire.version>2.20.1</maven.surefire.version>
    		<mssql.jdbc.version>6.1.0.jre8</mssql.jdbc.version>
 		<guava.version>19.0</guava.version>
    		<commons.collections.version>3.2.2</commons.collections.version>
@@ -64,6 +64,7 @@
 					</includes>
 					<reuseForks>false</reuseForks>
 					<forkCount>1</forkCount>
+					<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
 				</configuration>
 			</plugin>
 
